# Kaleidoscope

./: .gitignore  CMakeLists.txt  conanfile.txt
cmake/: compiler.cmake
src/: CMakeLists.txt  dummy.cpp  main.cpp
